--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ capybara-*.html
 .rspec
 /log
 /tmp
+/config/deploy.rb
+/config/deploy
 /db/*.sqlite3
 /public/system
 /coverage/
@@ -12,6 +14,7 @@ rerun.txt
 pickle-email-*.html
 config/initializers/secret_token.rb
 config/secrets.yml
+Capfile
 
 ## Environment normalisation:
 /.bundle
